--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Nate Lu</title>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- For Three.js -->
+    <canvas id="bg"></canvas>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
