--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nate Lu</title>
   </head>
   <body>
     <!-- For Three.js -->
     <canvas id="bg"></canvas>
+
+    <main>
+
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
