favicon.svg, fixed small bugs

--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Nate Lu</title>
-  </head>
-  <body>
-    <!-- For Three.js -->
-    <canvas id="bg"></canvas>
+</head>
 
-    <main>
+<body>
+<!-- For Three.js -->
+<canvas id="bg"></canvas>
 
-    </main>
-    <script type="module" src="/main.js"></script>
-  </body>
+<main>
+      <div class = "navbar">
+        <a href="/">
+          <img src="/resources/" alt="">
+        </a>
+      </div>
+</main>
+<script type="module" src="/main.js"></script>
+</body>
 </html>
