--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Nate Lu</title>
+    <title>Nate Lu - Software Engineer</title>
 </head>
 
 <body>
@@ -13,11 +13,26 @@
 <canvas id="bg"></canvas>
 
 <main>
-      <div class = "navbar">
-        <a href="/">
-          <img src="/resources/" alt="">
-        </a>
-      </div>
+    <div id="wrapper">
+        <div class="navbar">
+            <a class="logo" href="/">
+                <img src="/favicon.svg" alt="favicon.svg">
+            </a>
+            <div class = "menu">
+                <a class="about" href="/">
+                    About.
+                </a>
+
+                <a class="projects" href="/">
+                    Projects.
+                </a>
+
+                <a class="contact" href="/">
+                    Contact.
+                </a>
+            </div>
+        </div>
+    </div>
 </main>
 <script type="module" src="/main.js"></script>
 </body>
