added a lot of text, working on homescreen

--- a/index.html
+++ b/index.html
@@ -32,7 +32,28 @@
                 </a>
             </div>
         </div>
+
+        <div class = "title">
+            <p class = "greeting">
+                Hi, my name is
+            </p>
+
+            <h1 class = "name">
+                Nate Lu.
+            </h1>
+
+            <h1 class = "short">
+                I write code.
+            </h1>
+
+            <p class = "description">
+                I'm a software engineer and student specializing in
+            </p>
+
+        </div>
     </div>
+
+
 </main>
 <script type="module" src="/main.js"></script>
 </body>
