mobile scaling, more styling

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </h1>
 
             <p class = "description">
-                I'm a software engineer and student specializing in
+                I'm a software engineer and student who specializes in creating new solutions for old problems.
+                I have a strong background in machine learning, web and app development, and scripting.
             </p>
 
         </div>
