added about, cleaned up intro

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="logo" href="/">
                 <img src="/favicon.svg" alt="favicon.svg">
             </a>
-            <div class = "menu">
+            <div class="menu">
                 <a class="about" href="/">
                     About.
                 </a>
@@ -33,24 +33,80 @@
             </div>
         </div>
 
-        <div class = "title">
-            <p class = "greeting">
+        <div class="title">
+            <p class="greeting">
                 Hi, my name is
             </p>
 
-            <h1 class = "name">
+            <h1 class="name">
                 Nate Lu.
             </h1>
 
-            <h1 class = "short">
+            <h1 class="short">
                 I write code.
             </h1>
 
-            <p class = "description">
-                I'm a software engineer and student who specializes in creating new solutions for old problems.
-                I have a strong background in machine learning, web and app development, and scripting.
+            <p class="description">
+                I'm a software engineer and student who loves creating new solutions for old problems.
+                I have a strong background in machine learning, web development, app development, and scripting.
             </p>
 
+            <button class="contact_me">
+                Contact Me!
+            </button>
+        </div>
+
+        <div class="about">
+            <h2 class="about-heading">
+                About Me.
+            </h2>
+            <hr>
+
+            <div class="about-wrapper">
+                <p class="about-desc">
+                    I'm Nate, an aspiring software engineer living in
+                    <span>
+                        Austin, Texas.
+                    </span>
+                    My journey with code began when I decided to automate my electronics
+                    <a href="https://www.ebay.com/usr/tech4all_official">
+                        resale business
+                    </a>
+                    because manually entering sales and looking for new products was becoming too time-consuming.
+
+                    <br><br>
+
+                    My love of learning has led me to work with many aspects of software development, but I've had
+                    the most experience in machine learning, web & app development, and scripting. As a full-time
+                    <a href="https://www.austincc.edu/">
+                        student,
+                    </a>
+                    I keep myself occupied with personal and group projects, as well as positions of leadership in
+                    various
+                    <a href="https://austincc.campuslabs.com/engage/organization/acc_csso">
+                        clubs.
+                    </a>
+
+                    <br><br>
+
+                    I'm the sort of person that never gives up, no matter how much a <span>bug</span> makes me want to
+                    rip
+                    my hair out. With my experience in contract-based projects, as well as a number
+                    of group projects during
+                    <a href="https://devpost.com/nathanlumax">
+                        hackathons,
+                    </a>
+                    I'm looking for an internship or part-time position to utilize my experience and
+                    expand my knowledge.
+                </p>
+
+                <div class="img-container">
+                    <div class="me">
+                        <img src="/resources/imgs/pixelpfp.png" alt="Nate Lu" class="pixel">
+                        <img src="/resources/imgs/pfp.png" alt="Nate Lu" class="pfp">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
