--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js" integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r126/three.min.js"
+            integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg=="
+            crossorigin="anonymous"></script>
     <script src="https://unpkg.com/three@0.126.0/examples/js/loaders/GLTFLoader.js"></script>
     <title>Nate Lu - Software Engineer</title>
 </head>
@@ -18,8 +20,9 @@
     <div id="wrapper">
         <div class="navbar">
             <a class="logo" href="/">
-                <img src="/favicon.svg" alt="favicon.svg">
+                <img id = "my_logo" src="/favicon.svg" alt="favicon.svg">
             </a>
+
             <div class="menu">
                 <a class="about" href="/">
                     About.
@@ -33,6 +36,14 @@
                     Contact.
                 </a>
             </div>
+
+                <label class="switch">
+                    <input id = "dark" type="checkbox" checked>
+                    <span class="slider"></span>
+                </label>
+
+
+
         </div>
 
         <div class="title">
@@ -111,138 +122,140 @@
             </div>
         </div>
 
-        <div class = "skills">
+        <div class="skills">
 
             <h2 class="skills-heading">
                 My Skills.
             </h2>
             <hr>
 
-            <div class = "container">
-                <span class = "languages" id = "java">
+            <div class="container">
+                <span class="languages" id="java">
                     <img src="resources/logos/java.svg" alt="java">
-                    <span class = "text">Golang</span>
+                    <span class="text">Golang</span>
                 </span>
-                <span class = "languages" id = "cpp">
+                <span class="languages" id="cpp">
                     <img src="resources/logos/cpp.svg" alt="cpp">
-                    <span class = "text">C++</span>
+                    <span class="text">C++</span>
                 </span>
-                <span class = "languages" id = "python">
+                <span class="languages" id="python">
                     <img src="resources/logos/python.svg" alt="python">
-                    <span class = "text">Python</span>
+                    <span class="text">Python</span>
                 </span>
-                <span class = "languages" id = "html">
+                <span class="languages" id="html">
                     <img src="resources/logos/html.svg" alt="html">
-                    <span class = "text">HTML</span>
+                    <span class="text">HTML</span>
                 </span>
-                <span class = "languages" id = "javascript">
+                <span class="languages" id="javascript">
                     <img src="resources/logos/javascript.svg" alt="javascript">
-                    <span class = "text">Javascript</span>
+                    <span class="text">Javascript</span>
                 </span>
-                <span class = "languages" id = "csharp">
+                <span class="languages" id="csharp">
                     <img src="resources/logos/csharp.svg" alt="csharp">
-                    <span class = "text">C#</span>
+                    <span class="text">C#</span>
                 </span>
-                <span class = "languages" id = "kotlin">
+                <span class="languages" id="kotlin">
                     <img src="resources/logos/kotlin.svg" alt="kotlin">
-                    <span class = "text">Kotlin</span>
+                    <span class="text">Kotlin</span>
                 </span>
-                <span class = "languages" id = "sql">
+                <span class="languages" id="sql">
                     <img src="resources/logos/sql.svg" alt="sql">
-                    <span class = "text">SQL</span>
+                    <span class="text">SQL</span>
                 </span>
-                <span class = "languages" id = "c">
+                <span class="languages" id="c">
                     <img src="resources/logos/c.svg" alt="c">
-                    <span class = "text">C</span>
+                    <span class="text">C</span>
                 </span>
-                <span class = "languages" id = "golang">
+                <span class="languages" id="golang">
                     <img src="resources/logos/golang.svg" alt="golang">
-                    <span class = "text">Golang</span>
+                    <span class="text">Golang</span>
                 </span>
 
-                <span class = "technologies" id = "nodejs">
+                <span class="technologies" id="nodejs">
                     <img src="resources/logos/nodejs.svg" alt="nodejs">
-                    <span class = "text">Node.js</span>
+                    <span class="text">Node.js</span>
                 </span>
-                <span class = "technologies" id = "git">
+                <span class="technologies" id="git">
                     <img src="resources/logos/git.svg" alt="git">
-                    <span class = "text">Git</span>
+                    <span class="text">Git</span>
                 </span>
-                <span class = "technologies" id = "aws">
+                <span class="technologies" id="aws">
                     <img src="resources/logos/aws.svg" alt="aws">
-                    <span class = "text">Amazon Web Services</span>
+                    <span class="text">Amazon Web Services</span>
                 </span>
-                <span class = "technologies" id = "socketio">
+                <span class="technologies" id="socketio">
                     <img src="resources/logos/socketio.svg" alt="socketio">
-                    <span class = "text">Socket.io</span>
+                    <span class="text">Socket.io</span>
                 </span>
-                <span class = "technologies" id = "flask">
+                <span class="technologies" id="flask">
                     <img src="resources/logos/flask.svg" alt="flask">
-                    <span class = "text">Flask</span>
+                    <span class="text">Flask</span>
                 </span>
-                <span class = "technologies" id = "tensorflow">
+                <span class="technologies" id="tensorflow">
                     <img src="resources/logos/tensorflow.svg" alt="tensorflow">
-                    <span class = "text">Tensorflow</span>
+                    <span class="text">Tensorflow</span>
                 </span>
-                <span class = "technologies" id = "swing">
+                <span class="technologies" id="swing">
                     <img src="resources/logos/javaswing.svg" alt="javaswing">
-                    <span class = "text">Java Swing</span>
+                    <span class="text">Java Swing</span>
                 </span>
-                <span class = "technologies" id = "linux">
+                <span class="technologies" id="linux">
                     <img src="resources/logos/linux.svg" alt="linux">
-                    <span class = "text">Linux</span>
+                    <span class="text">Linux</span>
                 </span>
-                <span class = "technologies" id = "react">
+                <span class="technologies" id="react">
                     <img src="resources/logos/react.svg" alt="react">
-                    <span class = "text">React</span>
+                    <span class="text">React</span>
                 </span>
 
-                <span class = "software" id = "intellij">
+                <span class="software" id="intellij">
                     <img src="resources/logos/intellij.svg" alt="intellij">
-                    <span class = "text">Intellij IDEA</span>
+                    <span class="text">Intellij IDEA</span>
                 </span>
-                <span class = "software" id = "webstorm">
+                <span class="software" id="webstorm">
                     <img src="resources/logos/webstorm.svg" alt="webstorm">
-                    <span class = "text">Webstorm</span>
+                    <span class="text">Webstorm</span>
                 </span>
-                <span class = "software" id = "rider">
+                <span class="software" id="rider">
                     <img src="resources/logos/rider.svg" alt="rider">
-                    <span class = "text">Rider</span>
+                    <span class="text">Rider</span>
                 </span>
-                <span class = "software" id = "pycharm">
+                <span class="software" id="pycharm">
                     <img src="resources/logos/pycharm.svg" alt="pycharm">
-                    <span class = "text">Pycharm</span>
+                    <span class="text">Pycharm</span>
                 </span>
-                <span class = "software" id = "unity">
+                <span class="software" id="unity">
                     <img src="resources/logos/unity.svg" alt="unity">
-                    <span class = "text">Unity</span>
+                    <span class="text">Unity</span>
                 </span>
-                <span class = "software" id = "vscode">
+                <span class="software" id="vscode">
                     <img src="resources/logos/vscode.svg" alt="vscode">
-                    <span class = "text">Visual Studio Code</span>
+                    <span class="text">Visual Studio Code</span>
                 </span>
-                <span class = "software" id = "netbeans">
+                <span class="software" id="netbeans">
                     <img src="resources/logos/netbeans.svg" alt="netbeans">
-                    <span class = "text">Netbeans</span>
+                    <span class="text">Netbeans</span>
                 </span>
-                <span class = "software" id = "jupyter">
+                <span class="software" id="jupyter">
                     <img src="resources/logos/jupyter.svg" alt="jupyter">
-                    <span class = "text">Jupyter Notebook</span>
+                    <span class="text">Jupyter Notebook</span>
                 </span>
-                <span class = "software" id = "fitbit">
+                <span class="software" id="fitbit">
                     <img src="resources/logos/fitbit.svg" alt="fitbit">
-                    <span class = "text">Fitbit Studio</span>
+                    <span class="text">Fitbit Studio</span>
                 </span>
-                <span class = "software" id = "figma">
+                <span class="software" id="figma">
                     <img src="resources/logos/figma.svg" alt="figma">
-                    <span class = "text">Figma</span>
+                    <span class="text">Figma</span>
                 </span>
-                <span class = "software" id = "mysql">
+                <span class="software" id="mysql">
                     <img src="resources/logos/mysql.svg" alt="mysql">
-                    <span class = "text">MySQL</span>
+                    <span class="text">MySQL</span>
                 </span>
             </div>
         </div>
+
+
     </div>
 </main>
 
