added first project, a few reformats

--- a/index.html
+++ b/index.html
@@ -100,10 +100,8 @@
 
                     <br><br>
 
-                    I'm the sort of person that never gives up, no matter how much a bug makes me want to
-                    rip
-                    my hair out. With my experience in contract-based projects, as well as a number
-                    of group projects during
+                    I'm the type of person who doesn't give up, and wants to do the very best in every aspect. With
+                    my experience in contract-based projects, as well as a number  of group projects during
                     <a href="https://devpost.com/nathanlumax">
                         hackathons,
                     </a>
@@ -251,6 +249,61 @@
                     <span class="text">MySQL</span>
                 </span>
             </div>
+        </div>
+
+        <div class = "projects">
+            <h2 class="skills-heading">
+                My Projects.
+            </h2>
+            <hr>
+
+            <ul class = "projects-list">
+                <li class = "proj">
+                    <div class = "project-image">
+                        <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/imgs/proj-one.png" alt="Liquid Overlay Image">
+                        </a>
+                    </div>
+                    <div class = "project-content">
+                        <p class = "project-over"> My First Hackathon Win! </p>
+                        <h3 class = "project-title">
+                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
+                                Liquid Overlay
+                            </a>
+                        </h3>
+                        <div class = "project-description">
+                            <p>
+                                An overlay for first-person shooter games that improves accessibility for the disabled community.
+                                Displays game noises as visual cues, transcribes voice chat, and enables auto translation
+                                for users that speak different languages. Provides a fair playing field in competitive esports by
+                                bridging the gap between regular and handicapped players.
+                            </p>
+                        </div>
+                        <ul class = "project-tech">
+                            <li>Kotlin</li>
+                            <li>Jetpack Compose</li>
+                            <li>Windows API</li>
+                            <li>Figma</li>
+                            <li>Google Voice API</li>
+                        </ul>
+                        <div class = "project-links">
+                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://youtu.be/-OF2GF7EBwA" rel="noopener noreferrer" target="_blank">
+                                <img class = "youtube" src="resources/logos/youtube.svg" alt="Youtube Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://liquidhacks2021.devpost.com/" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
+                            </a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+
         </div>
 
 
