a few styling changes

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             <p>
                                 An overlay for first-person shooter games that improves accessibility for the disabled community.
                                 Displays game noises as visual cues, transcribes voice chat, and enables auto translation
-                                for users that speak different languages. Provides a fair playing field in competitive esports by
+                                for users that speak different languages. Provides a fair playing field in esports by
                                 bridging the gap between regular and handicapped players.
                             </p>
                         </div>
