made projects easier to add, added second one

--- a/index.html
+++ b/index.html
@@ -301,6 +301,45 @@
                         </div>
                     </div>
                 </li>
+                <li class = "proj-other">
+                    <div class = "project-image">
+                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/imgs/proj-two.png" alt="Liquid Overlay Image">
+                        </a>
+                    </div>
+                    <div class = "project-content">
+                        <p class = "project-over"> A Smartwatch App! </p>
+                        <h3 class = "project-title">
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                                Smilio
+                            </a>
+                        </h3>
+                        <div class = "project-description">
+                            <p>
+                                An overlay for first-person shooter games that improves accessibility for the disabled community.
+                                Displays game noises as visual cues, transcribes voice chat, and enables auto translation
+                                for users that speak different languages. Provides a fair playing field in esports by
+                                bridging the gap between regular and handicapped players.
+                            </p>
+                        </div>
+                        <ul class = "project-tech">
+                            <li>Javascript</li>
+                            <li>SVG</li>
+                            <li>Fitbit API</li>
+                            <li>CSS Animations</li>
+                            <li>Game Loops</li>
+                        </ul>
+                        <div class = "project-links">
+                            <a href="https://github.com/NathanMLu/Smilio" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/fitbitt.svg" alt="Fitbit Store Link to Liquid Overlay">
+                            </a>
+                        </div>
+                    </div>
+                </li>
             </ul>
 
 
