Restructured order, added two more projects

--- a/index.html
+++ b/index.html
@@ -118,139 +118,6 @@
             </div>
         </div>
 
-        <div class="skills">
-
-            <h2 class="skills-heading">
-                My Skills.
-            </h2>
-            <hr>
-
-            <div class="container">
-                <span class="languages" id="java">
-                    <img src="resources/logos/java.svg" alt="java">
-                    <span class="text">Golang</span>
-                </span>
-                <span class="languages" id="cpp">
-                    <img src="resources/logos/cpp.svg" alt="cpp">
-                    <span class="text">C++</span>
-                </span>
-                <span class="languages" id="python">
-                    <img src="resources/logos/python.svg" alt="python">
-                    <span class="text">Python</span>
-                </span>
-                <span class="languages" id="html">
-                    <img src="resources/logos/html.svg" alt="html">
-                    <span class="text">HTML</span>
-                </span>
-                <span class="languages" id="javascript">
-                    <img src="resources/logos/javascript.svg" alt="javascript">
-                    <span class="text">Javascript</span>
-                </span>
-                <span class="languages" id="csharp">
-                    <img src="resources/logos/csharp.svg" alt="csharp">
-                    <span class="text">C#</span>
-                </span>
-                <span class="languages" id="kotlin">
-                    <img src="resources/logos/kotlin.svg" alt="kotlin">
-                    <span class="text">Kotlin</span>
-                </span>
-                <span class="languages" id="sql">
-                    <img src="resources/logos/sql.svg" alt="sql">
-                    <span class="text">SQL</span>
-                </span>
-                <span class="languages" id="c">
-                    <img src="resources/logos/c.svg" alt="c">
-                    <span class="text">C</span>
-                </span>
-                <span class="languages" id="golang">
-                    <img src="resources/logos/golang.svg" alt="golang">
-                    <span class="text">Golang</span>
-                </span>
-
-                <span class="technologies" id="nodejs">
-                    <img src="resources/logos/nodejs.svg" alt="nodejs">
-                    <span class="text">Node.js</span>
-                </span>
-                <span class="technologies" id="git">
-                    <img src="resources/logos/git.svg" alt="git">
-                    <span class="text">Git</span>
-                </span>
-                <span class="technologies" id="aws">
-                    <img src="resources/logos/aws.svg" alt="aws">
-                    <span class="text">Amazon Web Services</span>
-                </span>
-                <span class="technologies" id="socketio">
-                    <img src="resources/logos/socketio.svg" alt="socketio">
-                    <span class="text">Socket.io</span>
-                </span>
-                <span class="technologies" id="flask">
-                    <img src="resources/logos/flask.svg" alt="flask">
-                    <span class="text">Flask</span>
-                </span>
-                <span class="technologies" id="tensorflow">
-                    <img src="resources/logos/tensorflow.svg" alt="tensorflow">
-                    <span class="text">Tensorflow</span>
-                </span>
-                <span class="technologies" id="swing">
-                    <img src="resources/logos/javaswing.svg" alt="javaswing">
-                    <span class="text">Java Swing</span>
-                </span>
-                <span class="technologies" id="linux">
-                    <img src="resources/logos/linux.svg" alt="linux">
-                    <span class="text">Linux</span>
-                </span>
-                <span class="technologies" id="react">
-                    <img src="resources/logos/react.svg" alt="react">
-                    <span class="text">React</span>
-                </span>
-
-                <span class="software" id="intellij">
-                    <img src="resources/logos/intellij.svg" alt="intellij">
-                    <span class="text">Intellij IDEA</span>
-                </span>
-                <span class="software" id="webstorm">
-                    <img src="resources/logos/webstorm.svg" alt="webstorm">
-                    <span class="text">Webstorm</span>
-                </span>
-                <span class="software" id="rider">
-                    <img src="resources/logos/rider.svg" alt="rider">
-                    <span class="text">Rider</span>
-                </span>
-                <span class="software" id="pycharm">
-                    <img src="resources/logos/pycharm.svg" alt="pycharm">
-                    <span class="text">Pycharm</span>
-                </span>
-                <span class="software" id="unity">
-                    <img src="resources/logos/unity.svg" alt="unity">
-                    <span class="text">Unity</span>
-                </span>
-                <span class="software" id="vscode">
-                    <img src="resources/logos/vscode.svg" alt="vscode">
-                    <span class="text">Visual Studio Code</span>
-                </span>
-                <span class="software" id="netbeans">
-                    <img src="resources/logos/netbeans.svg" alt="netbeans">
-                    <span class="text">Netbeans</span>
-                </span>
-                <span class="software" id="jupyter">
-                    <img src="resources/logos/jupyter.svg" alt="jupyter">
-                    <span class="text">Jupyter Notebook</span>
-                </span>
-                <span class="software" id="fitbit">
-                    <img src="resources/logos/fitbit.svg" alt="fitbit">
-                    <span class="text">Fitbit Studio</span>
-                </span>
-                <span class="software" id="figma">
-                    <img src="resources/logos/figma.svg" alt="figma">
-                    <span class="text">Figma</span>
-                </span>
-                <span class="software" id="mysql">
-                    <img src="resources/logos/mysql.svg" alt="mysql">
-                    <span class="text">MySQL</span>
-                </span>
-            </div>
-        </div>
-
         <div class = "projects">
             <h2 class="skills-heading">
                 My Projects.
@@ -295,7 +162,7 @@
                                 <img class = "youtube" src="resources/logos/youtube.svg" alt="Youtube Link to Liquid Overlay">
                             </a>
 
-                            <a href="https://liquidhacks2021.devpost.com/" rel="noopener noreferrer" target="_blank">
+                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
                             </a>
                         </div>
@@ -316,10 +183,9 @@
                         </h3>
                         <div class = "project-description">
                             <p>
-                                An overlay for first-person shooter games that improves accessibility for the disabled community.
-                                Displays game noises as visual cues, transcribes voice chat, and enables auto translation
-                                for users that speak different languages. Provides a fair playing field in esports by
-                                bridging the gap between regular and handicapped players.
+                                A quick reaction style game designed for Fitbit OS. Tap on "Smilio" as many times as you can before the timer runs out,
+                                but keep an eye out for traps and distractions along the way. Published to the Fitbit App Gallery and distributed to
+                                50+ devices during testing.
                             </p>
                         </div>
                         <ul class = "project-tech">
@@ -340,7 +206,220 @@
                         </div>
                     </div>
                 </li>
+                <li class = "proj">
+                    <div class = "project-image">
+                        <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/imgs/proj-one.png" alt="Liquid Overlay Image">
+                        </a>
+                    </div>
+                    <div class = "project-content">
+                        <p class = "project-over"> My First Hackathon Win! </p>
+                        <h3 class = "project-title">
+                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
+                                Liquid Overlay
+                            </a>
+                        </h3>
+                        <div class = "project-description">
+                            <p>
+                                An overlay for first-person shooter games that improves accessibility for the disabled community.
+                                Displays game noises as visual cues, transcribes voice chat, and enables auto translation
+                                for users that speak different languages. Provides a fair playing field in esports by
+                                bridging the gap between regular and handicapped players.
+                            </p>
+                        </div>
+                        <ul class = "project-tech">
+                            <li>Kotlin</li>
+                            <li>Jetpack Compose</li>
+                            <li>Windows API</li>
+                            <li>Figma</li>
+                            <li>Google Voice API</li>
+                        </ul>
+                        <div class = "project-links">
+                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://youtu.be/-OF2GF7EBwA" rel="noopener noreferrer" target="_blank">
+                                <img class = "youtube" src="resources/logos/youtube.svg" alt="Youtube Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                <li class = "proj-other">
+                    <div class = "project-image">
+                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/imgs/proj-three.png" alt="Toilet Roll Image">
+                        </a>
+                    </div>
+                    <div class = "project-content">
+                        <p class = "project-over"> A Multiplayer Experience! </p>
+                        <h3 class = "project-title">
+                            <a href="https://nathanmlu.itch.io/toilet-roll" rel="noopener noreferrer" target="_blank">
+                                Toilet Roll
+                            </a>
+                        </h3>
+                        <div class = "project-description">
+                            <p>
+                                A multiplayer labyrinth game in which the goal is to get to the restrooms before everyone else!
+                                Avoid traps and obstacles along the way, and remember to work with other players to get to the finish line.
+                            </p>
+                        </div>
+                        <ul class = "project-tech">
+                            <li>Unity</li>
+                            <li>C#</li>
+                            <li>Vectors/Matrices</li>
+                            <li>Graphic Design</li>
+                            <li>Sockets</li>
+                        </ul>
+                        <div class = "project-links">
+                            <a href="https://github.com/NathanMLu/Toilet-Roll" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
+                            </a>
+
+                            <a href="https://nathanmlu.itch.io/toilet-roll" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/itch.svg" alt="Itch Link to Toilet Roll">
+                            </a>
+                        </div>
+                    </div>
+                </li>
             </ul>
+
+            <div class="skills">
+
+                <h2 class="skills-heading">
+                    My Skills.
+                </h2>
+                <hr>
+
+                <div class="container">
+                <span class="languages" id="java">
+                    <img src="resources/logos/java.svg" alt="java">
+                    <span class="text">Golang</span>
+                </span>
+                    <span class="languages" id="cpp">
+                    <img src="resources/logos/cpp.svg" alt="cpp">
+                    <span class="text">C++</span>
+                </span>
+                    <span class="languages" id="python">
+                    <img src="resources/logos/python.svg" alt="python">
+                    <span class="text">Python</span>
+                </span>
+                    <span class="languages" id="html">
+                    <img src="resources/logos/html.svg" alt="html">
+                    <span class="text">HTML</span>
+                </span>
+                    <span class="languages" id="javascript">
+                    <img src="resources/logos/javascript.svg" alt="javascript">
+                    <span class="text">Javascript</span>
+                </span>
+                    <span class="languages" id="csharp">
+                    <img src="resources/logos/csharp.svg" alt="csharp">
+                    <span class="text">C#</span>
+                </span>
+                    <span class="languages" id="kotlin">
+                    <img src="resources/logos/kotlin.svg" alt="kotlin">
+                    <span class="text">Kotlin</span>
+                </span>
+                    <span class="languages" id="sql">
+                    <img src="resources/logos/sql.svg" alt="sql">
+                    <span class="text">SQL</span>
+                </span>
+                    <span class="languages" id="c">
+                    <img src="resources/logos/c.svg" alt="c">
+                    <span class="text">C</span>
+                </span>
+                    <span class="languages" id="golang">
+                    <img src="resources/logos/golang.svg" alt="golang">
+                    <span class="text">Golang</span>
+                </span>
+
+                    <span class="technologies" id="nodejs">
+                    <img src="resources/logos/nodejs.svg" alt="nodejs">
+                    <span class="text">Node.js</span>
+                </span>
+                    <span class="technologies" id="git">
+                    <img src="resources/logos/git.svg" alt="git">
+                    <span class="text">Git</span>
+                </span>
+                    <span class="technologies" id="aws">
+                    <img src="resources/logos/aws.svg" alt="aws">
+                    <span class="text">Amazon Web Services</span>
+                </span>
+                    <span class="technologies" id="socketio">
+                    <img src="resources/logos/socketio.svg" alt="socketio">
+                    <span class="text">Socket.io</span>
+                </span>
+                    <span class="technologies" id="flask">
+                    <img src="resources/logos/flask.svg" alt="flask">
+                    <span class="text">Flask</span>
+                </span>
+                    <span class="technologies" id="tensorflow">
+                    <img src="resources/logos/tensorflow.svg" alt="tensorflow">
+                    <span class="text">Tensorflow</span>
+                </span>
+                    <span class="technologies" id="swing">
+                    <img src="resources/logos/javaswing.svg" alt="javaswing">
+                    <span class="text">Java Swing</span>
+                </span>
+                    <span class="technologies" id="linux">
+                    <img src="resources/logos/linux.svg" alt="linux">
+                    <span class="text">Linux</span>
+                </span>
+                    <span class="technologies" id="react">
+                    <img src="resources/logos/react.svg" alt="react">
+                    <span class="text">React</span>
+                </span>
+
+                    <span class="software" id="intellij">
+                    <img src="resources/logos/intellij.svg" alt="intellij">
+                    <span class="text">Intellij IDEA</span>
+                </span>
+                    <span class="software" id="webstorm">
+                    <img src="resources/logos/webstorm.svg" alt="webstorm">
+                    <span class="text">Webstorm</span>
+                </span>
+                    <span class="software" id="rider">
+                    <img src="resources/logos/rider.svg" alt="rider">
+                    <span class="text">Rider</span>
+                </span>
+                    <span class="software" id="pycharm">
+                    <img src="resources/logos/pycharm.svg" alt="pycharm">
+                    <span class="text">Pycharm</span>
+                </span>
+                    <span class="software" id="unity">
+                    <img src="resources/logos/unity.svg" alt="unity">
+                    <span class="text">Unity</span>
+                </span>
+                    <span class="software" id="vscode">
+                    <img src="resources/logos/vscode.svg" alt="vscode">
+                    <span class="text">Visual Studio Code</span>
+                </span>
+                    <span class="software" id="netbeans">
+                    <img src="resources/logos/netbeans.svg" alt="netbeans">
+                    <span class="text">Netbeans</span>
+                </span>
+                    <span class="software" id="jupyter">
+                    <img src="resources/logos/jupyter.svg" alt="jupyter">
+                    <span class="text">Jupyter Notebook</span>
+                </span>
+                    <span class="software" id="fitbit">
+                    <img src="resources/logos/fitbit.svg" alt="fitbit">
+                    <span class="text">Fitbit Studio</span>
+                </span>
+                    <span class="software" id="figma">
+                    <img src="resources/logos/figma.svg" alt="figma">
+                    <span class="text">Figma</span>
+                </span>
+                    <span class="software" id="mysql">
+                    <img src="resources/logos/mysql.svg" alt="mysql">
+                    <span class="text">MySQL</span>
+                </span>
+                </div>
+            </div>
 
 
         </div>
