added final project

--- a/index.html
+++ b/index.html
@@ -208,43 +208,41 @@
                 </li>
                 <li class = "proj">
                     <div class = "project-image">
-                        <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
-                            <img src="resources/imgs/proj-one.png" alt="Liquid Overlay Image">
+                        <a href="https://optionsai.herokuapp.com/login" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/imgs/proj-four.png" alt="Rest API Image">
                         </a>
                     </div>
                     <div class = "project-content">
-                        <p class = "project-over"> My First Hackathon Win! </p>
+                        <p class = "project-over"> Still in Development! </p>
                         <h3 class = "project-title">
-                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
-                                Liquid Overlay
+                            <a href="https://optionsai.herokuapp.com/login" rel="noopener noreferrer" target="_blank">
+                                Rest API
                             </a>
                         </h3>
                         <div class = "project-description">
                             <p>
-                                An overlay for first-person shooter games that improves accessibility for the disabled community.
-                                Displays game noises as visual cues, transcribes voice chat, and enables auto translation
-                                for users that speak different languages. Provides a fair playing field in esports by
-                                bridging the gap between regular and handicapped players.
+                                After authenticating the user, this application is designed to transmit and receive stock trading webhooks
+                                in order to train an LSTM Neural Network. I built an encrypted login with sessions and cookies,
+                                as well as a dashboard to check webhook status.
+                                <span class = bolded>
+                                    The project has since been closed sourced, and is still in development.
+                                </span>
                             </p>
                         </div>
                         <ul class = "project-tech">
-                            <li>Kotlin</li>
-                            <li>Jetpack Compose</li>
-                            <li>Windows API</li>
-                            <li>Figma</li>
-                            <li>Google Voice API</li>
+                            <li>Flask</li>
+                            <li>HTML</li>
+                            <li>SQL Alchemy</li>
+                            <li>Heroku</li>
+                            <li>Postman</li>
                         </ul>
                         <div class = "project-links">
-                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer" target="_blank">
-                                <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
+                            <a href="https://github.com/NathanMLu/OptionsAi" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/github.svg" alt="Github Link to Rest API">
                             </a>
 
-                            <a href="https://youtu.be/-OF2GF7EBwA" rel="noopener noreferrer" target="_blank">
-                                <img class = "youtube" src="resources/logos/youtube.svg" alt="Youtube Link to Liquid Overlay">
-                            </a>
-
-                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer" target="_blank">
-                                <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
+                            <a href="https://optionsai.herokuapp.com/login" rel="noopener noreferrer" target="_blank">
+                                <img src="resources/logos/heroku.svg" alt="Heroku Link to Options AI">
                             </a>
                         </div>
                     </div>
