typo on image tag

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                 <li class = "proj-other">
                     <div class = "project-image">
                         <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
-                            <img src="resources/imgs/proj-three.png" alt="Toilet Roll Image">
+                            <img src="resources/imgs/proj-three.PNG" alt="Toilet Roll Image">
                         </a>
                     </div>
                     <div class = "project-content">
