updated cname, started contacts

--- a/index.html
+++ b/index.html
@@ -601,8 +601,10 @@
                         <h4>
                             Basic Web Browser
                         </h4>
-                        <p>A basic way to browse the internet, without the other distractions, and just the basics of a
-                            webpage. </p>
+                        <p>
+                            A basic way to browse the internet, without the other distractions, while keeping the basics any web browser may have.
+                        </p>
+
                         <ul>
                             <li>Java</li>
                             <li>Swing</li>
@@ -612,6 +614,20 @@
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class = "contact">
+            <h2 class="contact-heading">
+                Contact Me.
+            </h2>
+            <hr>
+
+            <p>
+                I'm looking for an internship or part-time position while I finish out my last semester at community college,
+
+            </p>
+
+
         </div>
 
 
